# automotive-security-test-bench

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  risk_register.py
.github/workflows/: ci.yml
docs/: architecture.md
examples/: ecu_risks.json
src/automotive_security_bench/: __init__.py  __main__.py  assessment.py  cli.py  controls.py  domain.py  reporting.py
tests/: test_assessment.py  test_cli_and_reporting.py  test_unmapped_threat_categories.py
